--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE"/>
 
-    <!-- GCM permission for your app -->
+    <!-- GCM permission for your app (replace [com.myapp.newstandalone] with your package name) -->
     <permission
         android:name="com.layer.quick_start_android.permission.C2D_MESSAGE"
         android:protectionLevel="signature"/>
@@ -24,14 +24,23 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ConversationListActivity"
+            android:label="@string/app_name" >
 
+        </activity>
+        <activity
+            android:name=".ViewMessagesActivity"
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustResize">
+        </activity>
         <!-- Layer SDK has these for monitoring network, boot, and GCM -->
         <receiver android:name="com.layer.sdk.services.LayerReceiver">
             <intent-filter>
@@ -40,7 +49,6 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
             </intent-filter>
         </receiver>
-
         <receiver
             android:name="com.layer.sdk.services.GcmBroadcastReceiver"
             android:permission="com.google.android.c2dm.permission.SEND">
@@ -49,7 +57,8 @@
                 <category android:name="com.layer.quick_start_android"/>
             </intent-filter>
         </receiver>
-
+        <service android:name="com.layer.sdk.services.GcmIntentService"/>
+        <!-- Listen for Layer-generated push Intents -->
         <receiver android:name=".LayerPushReceiver">
             <intent-filter>
                 <action android:name="com.layer.sdk.PUSH"/>
@@ -61,8 +70,7 @@
             </intent-filter>
         </receiver>
 
-        <!-- For GCM Push Notifications -->
-        <service android:name="com.layer.sdk.services.GcmIntentService"/>
+
 
     </application>
 
