--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,9 +37,15 @@
 
         </activity>
         <activity
+
             android:name=".ViewMessagesActivity"
             android:label="@string/app_name"
+            android:parentActivityName=".ConversationListActivity"
             android:windowSoftInputMode="adjustResize">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ConversationListActivity" />
+
         </activity>
         <!-- Layer SDK has these for monitoring network, boot, and GCM -->
         <receiver android:name="com.layer.sdk.services.LayerReceiver">
