--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Atlas-Android"]
 	path = Atlas-Android
-	url = git@github.com:layerhq/Atlas-Android
+	url = git@github.com:AdityaAgg/Atlas-Android.git
