--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,9 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 21
     buildToolsVersion "21.1.2"
-
+    packagingOptions {
+        exclude 'META-INF/services/com.fasterxml.jackson.core.JsonFactory'
+    }
     defaultConfig {
         applicationId "com.layer.quick_start_android"
         minSdkVersion 14
@@ -39,4 +41,6 @@ dependencies {
     compile 'org.slf4j:slf4j-log4j12:1.7.6'
     compile files('libs/bolts-android-1.2.0.jar')
     compile files('libs/Parse-1.9.2.jar')
+    compile 'com.google.code.gson:gson:2.3'
+
 }
