--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    buildToolsVersion "22.0.1"
     packagingOptions {
         exclude 'META-INF/services/com.fasterxml.jackson.core.JsonFactory'
     }
@@ -31,7 +31,7 @@ dependencies {
     compile project(':layer-atlas')
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
-    compile 'com.layer.sdk:layer-sdk:0.10.+'
+    compile 'com.layer.sdk:layer-sdk:0.15.1'
     // JAR
     /* 1: Use the following line to refer to a locally-built JAR, e.g. `gradle fatJarDebug` */
     // compile files('../../layer-android-sdk/sdk/build/libs/sdk-0.8.11.jar')
