--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 21
-    buildToolsVersion "22.0.1"
+    buildToolsVersion "23.0.0"
     packagingOptions {
         exclude 'META-INF/services/com.fasterxml.jackson.core.JsonFactory'
     }
@@ -31,16 +31,18 @@ dependencies {
     compile project(':layer-atlas')
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
-    compile 'com.layer.sdk:layer-sdk:0.15.1'
+    compile 'com.layer.sdk:layer-sdk:0.17.1'
+    //compile 'com.google.android.gms:play-services-gcm:7.8.0'
     // JAR
     /* 1: Use the following line to refer to a locally-built JAR, e.g. `gradle fatJarDebug` */
     // compile files('../../layer-android-sdk/sdk/build/libs/sdk-0.8.11.jar')
     /* 2: Use the following line to refer to a maven JAR */
     //compile "com.layer.sdk:layer-sdk:0.8.9@jar"
-    compile 'com.google.android.gms:play-services-base:6.5.+'
-    compile 'org.slf4j:slf4j-log4j12:1.7.6'
+    compile 'com.google.android.gms:play-services:7.8.0'
+    //compile 'org.slf4j:slf4j-log4j12:1.7.6'
     compile files('libs/bolts-android-1.2.0.jar')
     compile files('libs/Parse-1.9.2.jar')
     compile 'com.google.code.gson:gson:2.3'
+    compile 'com.jakewharton:disklrucache:2.0.2'
 
 }
