--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,18 @@
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_LOGS"/>
     <!-- GCM permission for your app (replace [com.myapp.newstandalone] with your package name) -->
     <permission
         android:name="com.layer.quick_start_android.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
 
     <uses-permission android:name="com.layer.quick_start_android.permission.C2D_MESSAGE" />
+
+    <permission android:name="com.myapp.package.permission.LAYER_PUSH"
+        android:protectionLevel="signature"/>
+    <uses-permission android:name="com.myapp.package.permission.LAYER_PUSH"/>
 
     <application
         android:allowBackup="true"
@@ -50,38 +55,25 @@
                 android:value=".ConversationListActivity" />
         </activity>
 
-        <!-- Layer SDK has these for monitoring network, boot, and GCM -->
-        <receiver android:name="com.layer.sdk.services.LayerReceiver" >
-            <intent-filter>
-                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
-                <action android:name="android.intent.action.ANY_DATA_STATE" />
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
-            </intent-filter>
-        </receiver>
-        <receiver
-            android:name="com.layer.sdk.services.GcmBroadcastReceiver"
-            android:permission="com.google.android.c2dm.permission.SEND" >
-            <intent-filter>
-                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
-
-                <category android:name="com.layer.quick_start_android" />
-            </intent-filter>
-        </receiver>
-
-        <service android:name="com.layer.sdk.services.GcmIntentService" />
-        <!-- Listen for Layer-generated push Intents -->
-        <!--
+        <!-- Your custom "com.layer.sdk.PUSH" notification Receiver -->
         <receiver android:name=".LayerPushReceiver">
             <intent-filter>
                 <action android:name="com.layer.sdk.PUSH"/>
                 <category android:name="com.layer.quick_start_android"/>
             </intent-filter>
-            <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+        </receiver>
+
+        <!-- Layer's GCM Receiver and Service -->
+        <receiver android:name="com.layer.sdk.services.GcmBroadcastReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND">
+            <intent-filter android:priority="950">
+                <action android:name="com.google.android.c2dm.intent.REGISTRATION"/>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE"/>
                 <category android:name="com.layer.quick_start_android"/>
             </intent-filter>
         </receiver>
-        -->
+        <service android:name="com.layer.sdk.services.GcmIntentService"/>
+
 
     </application>
 
