--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,16 +15,17 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_LOGS"/>
     <!-- GCM permission for your app (replace [com.myapp.newstandalone] with your package name) -->
+
+
+    <permission android:name="com.layer.quick_start_android.LAYER_PUSH"
+        android:protectionLevel="signature"/>
+    <uses-permission android:name="com.layer.quick_start_android.LAYER_PUSH"/>
+
     <permission
         android:name="com.layer.quick_start_android.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
 
     <uses-permission android:name="com.layer.quick_start_android.permission.C2D_MESSAGE" />
-
-    <permission android:name="com.myapp.package.permission.LAYER_PUSH"
-        android:protectionLevel="signature"/>
-    <uses-permission android:name="com.myapp.package.permission.LAYER_PUSH"/>
-
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
