--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,5 @@
 [submodule "Atlas-Android"]
 	path = Atlas-Android
 	url = git@github.com:AdityaAgg/Atlas-Android.git
+[submodule "Submod"]
+	url = git@github.com:Team-Roots/Atlas-Android.git
