--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,11 @@
         android:largeHeap="true"
         android:theme="@style/CustomActionBarTheme"
         android:name=".RootsApp">
+
+
+        <meta-data android:name="com.parse.push.gcm_sender_id"
+            android:value="id:155377978502" />
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -56,8 +61,10 @@
                 android:value=".ConversationListActivity" />
         </activity>
 
+
+        <!--for layer-->
         <!-- Your custom "com.layer.sdk.PUSH" notification Receiver -->
-        <receiver android:name=".LayerPushReceiver">
+        <receiver android:name=".LayerPushReceiver" android:exported="false">
             <intent-filter>
                 <action android:name="com.layer.sdk.PUSH"/>
                 <category android:name="com.layer.quick_start_android"/>
@@ -78,6 +85,32 @@
             </intent-filter>
         </receiver>
         <service android:name="com.layer.sdk.services.GcmIntentService"/>
+
+
+
+
+
+        <!--for parse-->
+        <service android:name="com.parse.PushService" />
+        <receiver android:name=".AvailabilityBroadcastReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.parse.push.intent.RECEIVE" />
+                <action android:name="com.parse.push.intent.DELETE" />
+                <action android:name="com.parse.push.intent.OPEN" />
+            </intent-filter>
+        </receiver>
+
+        <receiver android:name="com.parse.GcmBroadcastReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND">
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+                <category android:name="com.layer.quick_start_android" />
+            </intent-filter>
+        </receiver>
+
+
 
     </application>
 
