--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,17 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "23.0.0"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.1"
+    useLibrary  'org.apache.http.legacy'
     packagingOptions {
         exclude 'META-INF/services/com.fasterxml.jackson.core.JsonFactory'
     }
     defaultConfig {
         applicationId "com.layer.quick_start_android"
         minSdkVersion 14
-        targetSdkVersion 21
+        targetSdkVersion 23
+        multiDexEnabled true
         versionCode 1
         versionName "1.0"
     }
@@ -30,15 +32,15 @@ repositories {
 dependencies {
     compile project(':layer-atlas')
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:21.0.3'
-    compile 'com.layer.sdk:layer-sdk:0.17.1'
+    compile 'com.android.support:appcompat-v7:23.0.1'
+    compile 'com.layer.sdk:layer-sdk:0.18.2'
     //compile 'com.google.android.gms:play-services-gcm:7.8.0'
     // JAR
     /* 1: Use the following line to refer to a locally-built JAR, e.g. `gradle fatJarDebug` */
     // compile files('../../layer-android-sdk/sdk/build/libs/sdk-0.8.11.jar')
     /* 2: Use the following line to refer to a maven JAR */
     //compile "com.layer.sdk:layer-sdk:0.8.9@jar"
-    compile 'com.google.android.gms:play-services:7.8.0'
+    compile 'com.google.android.gms:play-services:8.3.0'
     //compile 'org.slf4j:slf4j-log4j12:1.7.6'
     compile files('libs/bolts-android-1.2.0.jar')
     compile files('libs/Parse-1.9.2.jar')
