--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.layer.sdk:layer-sdk:0.18.2'
+    compile 'com.android.support:multidex:1.0.0'
     //compile 'com.google.android.gms:play-services-gcm:7.8.0'
     // JAR
     /* 1: Use the following line to refer to a locally-built JAR, e.g. `gradle fatJarDebug` */
