--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,9 @@ android {
         minSdkVersion 14
         targetSdkVersion 23
         multiDexEnabled true
+
+        // Enabling multidex support.
+        //multiDexEnabled true
         versionCode 1
         versionName "1.0"
     }
@@ -34,18 +37,18 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.layer.sdk:layer-sdk:0.18.2'
-    compile 'com.android.support:multidex:1.0.0'
+    compile "com.mixpanel.android:mixpanel-android:4.6.4"
     //compile 'com.google.android.gms:play-services-gcm:7.8.0'
     // JAR
     /* 1: Use the following line to refer to a locally-built JAR, e.g. `gradle fatJarDebug` */
     // compile files('../../layer-android-sdk/sdk/build/libs/sdk-0.8.11.jar')
     /* 2: Use the following line to refer to a maven JAR */
     //compile "com.layer.sdk:layer-sdk:0.8.9@jar"
-    compile 'com.google.android.gms:play-services:8.3.0'
     //compile 'org.slf4j:slf4j-log4j12:1.7.6'
     compile files('libs/bolts-android-1.2.0.jar')
     compile files('libs/Parse-1.9.2.jar')
     compile 'com.google.code.gson:gson:2.3'
     compile 'com.jakewharton:disklrucache:2.0.2'
+    compile 'com.android.support:multidex:1.0.1'
 
 }
