--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
     <uses-permission android:name="com.layer.quick_start_android.permission.C2D_MESSAGE" />
 
     <application
-        android:name=".RootsApp"
+        android:name="com.team.roots.RootsApp"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -40,7 +40,7 @@
             android:value="id:155377978502" />
 
         <activity
-            android:name=".MainActivity"
+            android:name="com.team.roots.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppThemeLogin"
             android:screenOrientation="portrait">
@@ -51,22 +51,22 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ConversationListActivity"
+            android:name="com.team.roots.ConversationListActivity"
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name=".ViewMessagesActivity"
+            android:name="com.team.roots.ViewMessagesActivity"
             android:label="@string/app_name"
             android:windowSoftInputMode="adjustResize" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ConversationListActivity" />
+                android:value="com.team.roots.ConversationListActivity" />
         </activity>
 
 
         <!-- for layer -->
         <!-- Your custom "com.layer.sdk.PUSH" notification Receiver -->
-        <receiver android:name=".LayerPushReceiver" >
+        <receiver android:name="com.team.roots.LayerPushReceiver" >
             <intent-filter>
                 <action android:name="com.layer.sdk.PUSH" />
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
@@ -93,7 +93,7 @@
         <service android:name="com.parse.PushService" />
 
         <receiver
-            android:name=".AvailabilityBroadcastReceiver"
+            android:name="com.team.roots.AvailabilityBroadcastReceiver"
             android:exported="false" >
             <intent-filter>
                 <action android:name="com.parse.push.intent.RECEIVE" />
