new on boarding text as a replacement for alert dialogs, login onboarding using a view pager

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         exclude 'META-INF/services/com.fasterxml.jackson.core.JsonFactory'
     }
     defaultConfig {
-        applicationId "com.layer.quick_start_android"
+        applicationId "com.team.roots"
         minSdkVersion 14
         targetSdkVersion 23
         multiDexEnabled true
