--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.layer.quick_start_android"
+    package="com.team.roots"
     >
 
     <!-- Layer SDK uses these for monitoring network state and receiving GCM -->
@@ -17,16 +17,16 @@
     <!-- GCM permission for your app (replace [com.myapp.newstandalone] with your package name) -->
 
     <permission
-        android:name="com.layer.quick_start_android.LAYER_PUSH"
+        android:name="com.team.roots.LAYER_PUSH"
         android:protectionLevel="signature" />
 
-    <uses-permission android:name="com.layer.quick_start_android.LAYER_PUSH" />
+    <uses-permission android:name="com.team.roots.LAYER_PUSH" />
 
     <permission
-        android:name="com.layer.quick_start_android.permission.C2D_MESSAGE"
+        android:name="com.team.roots.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
 
-    <uses-permission android:name="com.layer.quick_start_android.permission.C2D_MESSAGE" />
+    <uses-permission android:name="com.team.roots.permission.C2D_MESSAGE" />
 
     <application
         android:name="com.team.roots.RootsApp"
@@ -71,7 +71,7 @@
                 <action android:name="com.layer.sdk.PUSH" />
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
 
-                <category android:name="com.layer.quick_start_android" />
+                <category android:name="com.team.roots" />
             </intent-filter>
         </receiver>
 
@@ -83,7 +83,7 @@
                 <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
 
-                <category android:name="com.layer.quick_start_android" />
+                <category android:name="com.team.roots" />
             </intent-filter>
         </receiver>
 
@@ -111,7 +111,7 @@
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
                 <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
 
-                <category android:name="com.layer.quick_start_android" />
+                <category android:name="com.team.roots" />
             </intent-filter>
         </receiver>
     </application>
