--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,7 @@
             android:name="com.team.roots.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppThemeLogin"
+            android:windowSoftInputMode="adjustPan"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -52,11 +53,13 @@
         </activity>
         <activity
             android:name="com.team.roots.ConversationListActivity"
+            android:windowSoftInputMode="stateHidden"
             android:label="@string/app_name" >
         </activity>
         <activity
             android:name="com.team.roots.ViewMessagesActivity"
             android:label="@string/app_name"
+
             android:windowSoftInputMode="adjustResize" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
