--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,6 @@ android {
         multiDexEnabled true
 
         // Enabling multidex support.
-        //multiDexEnabled true
         versionCode 1
         versionName "1.0"
     }
@@ -33,8 +32,8 @@ repositories {
 }
 
 dependencies {
-    compile project(':layer-atlas')
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile (project(':layer-atlas'))
+
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.layer.sdk:layer-sdk:0.18.2'
     compile "com.mixpanel.android:mixpanel-android:4.6.4"
@@ -49,8 +48,8 @@ dependencies {
     compile 'com.jakewharton:disklrucache:2.0.2'
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.wunderlist:sliding-layer:1.2.5'
-    compile 'com.parse.bolts:bolts-android:1.2.1'
-    compile 'com.parse:parse-android:1.10.3'
+
+
 
 
 }
