--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:largeHeap="true"
-        android:theme="@style/CustomActionBarTheme" >
+        android:theme="@style/AppTheme" >
         <meta-data
             android:name="com.parse.push.gcm_sender_id"
             android:value="id:155377978502" />
@@ -42,7 +42,6 @@
         <activity
             android:name="com.team.roots.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppThemeLogin"
             android:windowSoftInputMode="adjustPan"
             android:screenOrientation="portrait">
             <intent-filter>
