--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,11 +32,10 @@ repositories {
 }
 
 dependencies {
-    compile (project(':layer-atlas'))
-
+    compile project(':layer-atlas')
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.layer.sdk:layer-sdk:0.18.2'
-    compile "com.mixpanel.android:mixpanel-android:4.6.4"
+    compile 'com.mixpanel.android:mixpanel-android:4.6.4'
     //compile 'com.google.android.gms:play-services-gcm:7.8.0'
     // JAR
     /* 1: Use the following line to refer to a locally-built JAR, e.g. `gradle fatJarDebug` */
@@ -48,8 +47,6 @@ dependencies {
     compile 'com.jakewharton:disklrucache:2.0.2'
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.wunderlist:sliding-layer:1.2.5'
-
-
-
-
+    //compile files('libs/bolts-android-1.2.0.jar')
+    //compile files('libs/Parse-1.9.2.jar')
 }
