--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,16 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 24
+    buildToolsVersion "24.0.2"
     useLibrary  'org.apache.http.legacy'
     packagingOptions {
         exclude 'META-INF/services/com.fasterxml.jackson.core.JsonFactory'
     }
     defaultConfig {
-        applicationId "com.team.roots"
+        applicationId "com.team.r00ts"
         minSdkVersion 16
-        targetSdkVersion 23
+        targetSdkVersion 24
         multiDexEnabled true
 
         // Enabling multidex support.
@@ -27,15 +27,16 @@ android {
 
 repositories {
     maven { url "https://raw.githubusercontent.com/layerhq/releases-android/master/releases/" }
-
+    maven { url "https://raw.githubusercontent.com/layerhq/Atlas-Android/master/releases/" }
     mavenCentral()
 }
 
 dependencies {
-    compile project(':layer-atlas')
-    compile 'com.android.support:appcompat-v7:23.0.1'
-    compile 'com.layer.sdk:layer-sdk:0.18.2'
+    compile 'com.layer.atlas:layer-atlas:0.4.0'
+    compile 'com.android.support:appcompat-v7:24.0.0'
     compile 'com.mixpanel.android:mixpanel-android:4.6.4'
+    compile 'com.layer.sdk:layer-sdk:0.23.1'
+
     //compile 'com.google.android.gms:play-services-gcm:7.8.0'
     // JAR
     /* 1: Use the following line to refer to a locally-built JAR, e.g. `gradle fatJarDebug` */
@@ -43,10 +44,13 @@ dependencies {
     /* 2: Use the following line to refer to a maven JAR */
     //compile "com.layer.sdk:layer-sdk:0.8.9@jar"
     //compile 'org.slf4j:slf4j-log4j12:1.7.6'
-    compile 'com.google.code.gson:gson:2.3'
-    compile 'com.jakewharton:disklrucache:2.0.2'
+    compile 'com.google.code.gson:gson:2.4'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.wunderlist:sliding-layer:1.2.5'
+
+    compile 'com.parse:parse-android:1.13.1'
     //compile files('libs/bolts-android-1.2.0.jar')
     //compile files('libs/Parse-1.9.2.jar')
 }
+apply plugin: 'com.google.gms.google-services'
